<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/TextView_stock_price"
            android:autoSizeTextType="uniform"
            android:layout_width="0dp"
            android:layout_weight="75"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="$1000.10" />
        <TextView
            android:id="@+id/TextView_stock_price_delta"
            android:layout_width="0dp"
            android:layout_weight="25"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=".05%"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="7">

        <TextView
            android:id="@+id/label_timeframe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_timeframe" />

        <Spinner
            android:id="@+id/spinner_timeframe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:entries="@array/timeframe_arrays"
            android:spinnerMode="dialog" />
    </RelativeLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="43">

        <LinearLayout
            android:id="@+id/LinearLayout_Stock_Details_Top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:baselineAligned="false"
            android:weightSum="300">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100">

                <TextView
                    android:id="@+id/TextView_high_price_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="false"
                    android:text="@string/label_high" />

                <TextView
                    android:id="@+id/TextView_high_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TextView_high_price_label"
                    android:layout_centerHorizontal="false"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100">

                <TextView
                    android:id="@+id/TextView_current_bid_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="@string/label_current_bid_price" />

                <TextView
                    android:id="@+id/TextView_current_bid_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TextView_current_bid_label"
                    android:layout_centerHorizontal="true"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100">

                <TextView
                    android:id="@+id/TextView_24_hour_volume_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:text="@string/label_24_hour_volume" />

                <TextView
                    android:id="@+id/TextView_24_hour_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TextView_24_hour_volume_label"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout_Stock_Details_Btm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout_Stock_Details_Top"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:baselineAligned="false"
            android:weightSum="300">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100">

                <TextView
                    android:id="@+id/TextView_low_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/label_low" />

                <TextView
                    android:id="@+id/TextView_low_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TextView_low_label"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100">

                <TextView
                    android:id="@+id/TextView_current_ask_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:text="@string/label_current_ask_price" />

                <TextView
                    android:id="@+id/TextView_current_ask_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/TextView_current_ask_label"
                    android:layout_centerHorizontal="true"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="100">

                <TextView
                    android:id="@+id/TextView_price_change_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:text="@string/label_price_change" />

                <TextView
                    android:id="@+id/TextView_price_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TextView_price_change_label"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_below="@+id/LinearLayout_Stock_Details_Btm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--        TODO: Implement BUY/SELL/SHORT SELL-->
            <!--        <Spinner-->
            <!--            android:id="@+id/Spinner_Order_Type"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content" />-->
            <com.clearbox.stockfolio.customview.NoBackEditText
                android:id="@+id/EditText_Quantity"
                android:layout_alignParentTop="true"
                android:hint="TEXT"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RelativeLayout
                android:id="@+id/RelativeLayout_buy_sell_holder"
                android:layout_below="@+id/EditText_Quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/Button_Buy"
                    android:text="BUY"
                    android:layout_alignParentStart="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true" />

                <Button
                    android:id="@+id/Button_Sell"
                    android:text="SELL"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
